# pysomfymylink

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  pytest.ini
.github/workflows/: release.yml  unit_tests.yml
src/pysomfymylink/: __init__.py  __main__.py  client.py  const.py  errors.py  models.py
tests/: conftest.py  test_client.py
